# niagra

./: .gitignore  Benchmark.hs  LICENSE  changelog.md  example.hs  niagra.cabal
example/: Main.hs
src/: tests.hs
src/Data/: Niagra.hs
src/Data/Niagra/: Accumulation.hs  AccumulatorT.hs  At.hs  Block.hs  Buildable.hs  Builder.hs  DSL.hs  Internal.hs  Monad.hs  Properties.hs  Render.hs  Rule.hs  Selector.hs  Value.hs
src/Data/Niagra/At/: FontFace.hs  Media.hs
src/Data/Niagra/Builder/: Buffer.hs  Internal.hs  Numbers.hs
src/Data/Niagra/Properties/: Background.hs  Border.hs  Box.hs  Color.hs  Font.hs  Misc.hs  Text.hs  Units.hs
src/Data/Niagra/Rule/: FontFace.hs
src/Data/Niagra/Selector/: Attribute.hs  Combinators.hs  Tags.hs
