name:                niagra
version:             0.0.1
synopsis:            CSS Combinator Library for Haskell
license:             MIT
license-file:        LICENSE
author:              Nathaniel Symer
maintainer:          nate@symer.io
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:   Data.Niagra
                     Data.Niagra.Monad
                     Data.Niagra.Block
                     Data.Niagra.Selector
                     Data.Niagra.Selector.Tags
  hs-source-dirs:    src
  default-language:  Haskell2010
  build-depends:     base >=4.8 && <4.9,
                     transformers,
                     mtl,
                     text
  

executable example
  default-language:  Haskell2010
  main-is:           example.hs
  ghc-options:       -threaded -Wall -O2
  build-depends:     base,
                     niagra,
                     text,
                     transformers
                     
executable benchmark
  default-language:  Haskell2010
  main-is:           benchmark.hs
  ghc-options:       -threaded -Wall -O2
  build-depends:     base,
                     niagra,
                     text,
                     transformers,
                     criterion
  